r1:
	* Primera relesase del juego
	
r2:
	* Ya no es necesaria el modulo termcolor, se usa directamente las sentencias de escape ANSI correspondientes

r3 (stable):
	* Ahora se usura Curses para mostrar una interfaz de juego mas clara.
	
r4 (stable):
	* Solucionado un fallo a la hora de comprobar que tecla se pulso
	* Convierte las mayúsculas en minúscula

r5:
	* Terminado de solucionar el fallo a la hora de comprobar que tecla se pulso
	* Otros cambios menores

r6:
	* Solucionado un fallo en el instalador

r7:
	* Solucionado un fallo al redimensionar la terminal cuando pregunta si se desea volver a jugar
	* Si una tecla ya se pulso si se vuelve a pulsar no lo contara como error

r8:
	* Ahora al preguntar si se quiere volver a jugar se puede tambien pulsar la tecla S