@@ -7,7 +7,7 @@ Ahorcapy es mi versión del juego del Ahorcado.
 Es un pequeño proyecto que empeze por aburrimiento en mis ratos libres.
 El juego se juega desde una terminal.
 Espero que os guste como a mi programarlo ^^
-Agradecimientos especiales o los usuarios de la comunidad DesdeLinux por su apoyo, ayuda e ideas
+Agradecimientos especiales o los usuarios de la comunidad DesdeLinux por su apoyo, ayuda e ideas, y a vosotros por descargarlo.
 
 Requisitos:
 Python 2.7 o 3.2
